--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 </head>
 
 <body>
-  <h1 id="level-title">Press A Key to Start</h1>
+  <h1 id="level-title">Press a Button or any Key to Start</h1>
+
+  <button class="btn-start">START</button>
+
   <div class="container">
     <div lass="row">
 
